# llzk-lib

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  TASK.md  ZKLean.md  box.llzk  build_deps.sh  cex.llzk  concrete_smt.llzk  execution_engine_check.sh  flake.nix  llzk-lib.code-workspace  out.llzk  out.smt2  p.diff  slides.llzk  test.llzk
backends/llvm-conv/include/: CMakeLists.txt
backends/llvm-conv/include/llvm-conv/Conversions/: CMakeLists.txt  ConversionPasses.h  ConversionPasses.td
backends/pcl-conv/include/: CMakeLists.txt
backends/pcl-conv/include/pcl-conv/Transforms/: CMakeLists.txt  TransformationPasses.h  TransformationPasses.td
backends/pcl/include/: CMakeLists.txt
backends/pcl/include/pcl/: DialectRegistration.h
backends/pcl/include/pcl/Conversion/: CMakeLists.txt  ConversionPasses.h  ConversionPasses.td
backends/pcl/include/pcl/Transforms/: CMakeLists.txt  TransformationPasses.h  TransformationPasses.td
backends/r1cs/include/: CMakeLists.txt
backends/r1cs/include/r1cs/: CMakeLists.txt  DialectRegistration.h  InitAllDialects.h
backends/r1cs/include/r1cs/Transforms/: CMakeLists.txt  TransformationPasses.h  TransformationPasses.td
backends/smt/include/: CMakeLists.txt
backends/smt/include/smt/Conversions/: CMakeLists.txt  (+2 more)
backends/zklean/include/: CMakeLists.txt
backends/zklean/include/zklean/: DialectRegistration.h
backends/zklean/lib/: CMakeLists.txt  DialectRegistration.cpp
backends/zklean/lib/Conversions/: CMakeLists.txt  LLZKToZKLean.cpp  ZKLeanToLLZK.cpp
backends/zklean/lib/Dialect/: CMakeLists.txt
backends/zklean/lib/Transforms/: CMakeLists.txt  PrettyPrintZKLean.cpp
lib/Conversions/: CMakeLists.txt  FeltToLLVM.cpp  FeltToZKExpr.cpp  LLZKToZKLean.cpp  ZKLeanToLLZK.cpp
lib/Dialect/Array/: CMakeLists.txt
lib/Dialect/Array/IR/: CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/Array/Transforms/: ArrayToScalarPass.cpp  CMakeLists.txt
lib/Dialect/Array/Util/: ArrayTypeHelper.cpp  CMakeLists.txt
lib/Dialect/Bool/: CMakeLists.txt
lib/Dialect/Bool/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Bool/Transforms/: LowerBoolQuantifiersPass.cpp
lib/Dialect/Channel/: CMakeLists.txt
lib/Dialect/Channel/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Felt/: CMakeLists.txt
lib/Dialect/Felt/IR/: Attrs.cpp  Dialect.cpp  Ops.cpp
lib/Dialect/Function/: CMakeLists.txt
lib/Dialect/Function/IR/: Dialect.cpp  OpTraits.cpp  Ops.cpp
lib/Dialect/LLZK/: CMakeLists.txt
lib/Dialect/LLZK/IR/: AttributeHelper.cpp  Attrs.cpp  Dialect.cpp  Ops.cpp  Versioning.cpp
lib/Dialect/POD/: CMakeLists.txt
lib/Dialect/POD/IR/: Attrs.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/POD/Transforms/: CMakeLists.txt  PodToScalarPass.cpp
lib/Dialect/SMT/: CMakeLists.txt  SMTAttributes.cpp  SMTDialect.cpp  SMTOps.cpp  SMTTypes.cpp
lib/Dialect/Shared/: Builders.cpp  CMakeLists.txt  DiscardableAllocationOpInterfaces.cpp
lib/Dialect/Verif/: CMakeLists.txt
lib/Dialect/Verif/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Verif/Util/: ForbiddenPreconditionInfluence.cpp
lib/Transforms/: CMakeLists.txt  DiscardableAllocationOpInterfaces.cpp  LLZKAggregateScalarizationPass.cpp  LLZKAlgebraizeFeltOpsPass.cpp  LLZKArithmetizeSCFIfPass.cpp  LLZKComputeConstrainToProductPass.cpp  LLZKEnforceNoOverwritePass.cpp  LLZKFuseProductIfsPass.cpp  LLZKFuseProductLoopsPass.cpp  LLZKInlineFreeFunctionsPass.cpp  LLZKInlineStructsPass.cpp  LLZKInlineTopLevelFunctionsPass.cpp  LLZKInliningExtensions.cpp  LLZKLoweringUtils.cpp  LLZKPCLLoweringPass.cpp  LLZKPolyLoweringPass.cpp  LLZKR1CSLoweringPass.cpp  LLZKRedundantOperationEliminationPass.cpp  LLZKRedundantReadAndWriteEliminationPass.cpp  LLZKRemoveUnusedDiscardableAllocationsPass.cpp  LLZKTransformationPassPipelines.cpp  LLZKUnusedDeclarationEliminationPass.cpp  LLZKVerifToSmtPass.cpp  LLZKWhileToForPass.cpp  LLZKWitgenLoweringPass.cpp  PCLLoweringPass.cpp  PrettyPrintZKLean.cpp  TransformationPassPipelines.cpp
lib/Util/: AffineHelper.cpp  CMakeLists.txt  Debug.cpp  DynamicAPIntHelper.cpp  Field.cpp  StreamHelper.cpp  SymbolHelper.cpp  SymbolLookup.cpp  SymbolTableLLZK.cpp  TypeHelper.cpp
tools/llzk-opt/: CMakeLists.txt  llzk-opt.cpp
tools/llzk-smt-check/: CMakeLists.txt  llzk-smt-check.cpp
tools/llzk-tblgen/: AttrCAPIGen.cpp  AttrCAPITestGen.cpp  CMakeLists.txt  CommonAttrOrTypeCAPIGen.h  CommonAttrOrTypeCAPITestGen.cpp  CommonAttrOrTypeCAPITestGen.h  CommonCAPIGen.cpp  CommonCAPIGen.h  DialectCAPITestGen.cpp  EnumCAPIGen.cpp  EnumCAPITestGen.cpp  OpCAPIGen.cpp  OpCAPIParamHelper.cpp  OpCAPITestGen.cpp  TypeCAPIGen.cpp  TypeCAPITestGen.cpp
tools/llzk-translate/: CMakeLists.txt  llzk-translate.cpp
tools/llzk-witgen/: CMakeLists.txt  Errors.h  ExecutionEngineBackend.cpp  ExecutionEngineBackend.h  Interpreter.cpp  Interpreter.h  JSON.cpp  JSON.h  ValueModel.cpp  ValueModel.h  WitgenDriver.cpp  WitgenDriver.h  WitgenLowering.cpp  WitgenLowering.h  WitgenUtils.cpp  WitgenUtils.h  WitnessSelection.cpp  WitnessSelection.h  llzk-witgen.cpp
unittests/: CMakeLists.txt
unittests/Analysis/: CallGraphTests.cpp  DynamicAPIntTests.cpp  ForbiddenPreconditionInfluence.cpp  IntervalTests.cpp
unittests/CAPI/: Builder.cpp  CAPITestBase.h  CMakeLists.txt  Constants.cpp  Support.cpp  Transforms.cpp  Typing.cpp  Validators.cpp  c_compatibility_test.c
unittests/CAPI/Dialect/: Array.cpp  Boolean.cpp  Cast.cpp  Constrain.cpp  Felt.cpp  Function.cpp  Global.cpp  Include.cpp  LLZK.cpp  POD.cpp  Poly.cpp  String.cpp  Struct.cpp  Undef.cpp  Verif.cpp
unittests/IR/: BoolFoldTests.cpp  BuildersTests.cpp  CallOpTests.cpp  CreateArrayOpTests.cpp  FeltFoldTests.cpp  FunctionDialectTests.cpp  OpTestBase.h  SMTAttributeTests.cpp  SpecializedMemoryPassesTests.cpp  TypesTests.cpp  VerifDialectTests.cpp
unittests/Transforms/: CMakeLists.txt  LoweringUtilsTests.cpp  RedundantReadWriteTests.cpp
unittests/Util/: ArrayTypeHelperTest.cpp  FieldTests.cpp  ForbiddenPreconditionInfluence.cpp  SymbolHelperTest.cpp  TypeHelperTest.cpp
unittests/Witgen/: CMakeLists.txt  WitgenTests.cpp
(+12269 files in other folders)
